fix spacing home

--- a/assets/sass/_partials/_home.scss
+++ b/assets/sass/_partials/_home.scss
@@ -26,6 +26,16 @@
 		padding-top: 2rem;
 		padding-bottom: 2rem;
 
+		@include media-breakpoint-down(xs) {
+			text-align: center;
+
+			@include media-breakpoint-down(md) {
+				p {
+					text-align: left;
+				}
+			}
+		}
+
 		.title--3 {
 			margin-bottom: 4rem;
 
@@ -77,10 +87,6 @@
 	}
 
 	.mision__right {
-		@include media-breakpoint-down(md) {
-			padding-bottom: 4rem;
-		}
-
 		.content {
 			@include backgroundSettings;
 			min-height: 510px;
